QjackCtl - JACK Audio Connection Kit Qt GUI Interface 
-----------------------------------------------------

ChangeLog


GIT HEAD

- Fixed default preset/aliases switching and reloading when entering 
  pure-client mode (ie. "Active" status). (EXPERIMENTAL)


0.9.2  2021-03-14  An End-of-Winter'21 Release.

- Clock source, Self-connect mode and Server synchronous mode 
  options are now always enabled on the Setup / Settings dialog,
  although only available or effective to jackd2.
  
- Graph Disconnect now applies to selected connections or nodes only.


0.9.1  2021-02-07  A Winter'21 Release.

- Graph Disconnect now applies to all selected ports and connections.

- Main window is now freely resizable, while keeping all the buttons 
  stretched to the same aspect ratio.

- Warning to confirm application close is now back in business when 
  functioning as client only (Active).

- Graph items are automatically raised when created or high-lighted 
  (incremental z-value).

- Add a little but straight horizontal line-gap to the Graph 
  connections.

- Customize the Graph zoom slider widget to reset upon mouse 
  middle-button click.

- Add Clear preset button to Setup dialog.

- Use default values for most preset parameters: sample rate, 
  frames/period (aka. buffer-size), periods/buffer, realtime
  priority, port maximum, client timeout, word length, wait time,
  channel maximum.

- Early preparations for the New Year develop(ment) cycle.


0.9.0  2020-12-17  A Winter'20 Release.

- List only available backend drivers when JACK D-BUS is enabled.

- Graph client-name / node-title aliases persistence have been 
  hopefully fixed.

- Get rid of those "JACK has crashed" red-herrings from latest 
  Windows(tm) builds.

- Early fixing to build for Qt >= 6.0.0 and comply with C++17 
  standard.


0.6.3  2020-07-31  A Summer'20 Release.

- Clock source and Self connect restriction options have been added 